CMAKE_MINIMUM_REQUIRED(VERSION 3.6)
PROJECT(tablelib)
ADD_DEFINITIONS("-Wall -O2")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lua-5.3.6/)
INCLUDE_DIRECTORIES(.)
AUX_SOURCE_DIRECTORY(. SRC)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/libs/)
SET(CMAKE_SHARED_LIBRARY_PREFIX "")
ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} lua-5.3.6)
